--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -12,8 +12,7 @@
   <li *ngFor="let hero of heroes">
     <a routerLink="/detail/{{hero.id}}">
       <span class="badge">{{hero.id}}</span> {{hero.name}}
-      <button class="delete" title="delete hero"
-  (click)="delete(hero)">x</button>
+      <button class="delete" title="delete hero" (click)="delete(hero)">x</button>
     </a>
   </li>
 </ul>
